--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: gunicorn pdfconverter.wsgi:application --bind 0.0.0.0:$PORT
+  web: gunicorn unconf-demo.wsgi:application --bind 0.0.0.0:$PORT
